<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.romanprisyazhnuk.thinkaheadapp.MainActivity"
    android:background="#090808">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/aboutustop"
        android:scaleType="centerCrop"
        android:onClick="screenSwitcherToMain"
        android:layout_alignWithParentIfMissing="false"
        android:baselineAlignBottom="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView13"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_group_group_str"
        android:id="@+id/textView13"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="screenSwitcherToAboutThinkAhead"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_kate_str"
        android:id="@+id/textView14"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:onClick="screenSwitcherToAboutKate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_olya_str"
        android:id="@+id/textView15"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:layout_below="@+id/textView14"
        android:layout_alignRight="@+id/textView14"
        android:layout_alignEnd="@+id/textView14"
        android:layout_marginTop="45dp"
        android:onClick="screenSwitcherToAboutOlya"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_main_str"
        android:id="@+id/textView16"
        android:textSize="40sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
       />

</RelativeLayout>
