<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.romanprisyazhnuk.thinkaheadapp.MainActivity"
    android:background="#090808">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView7"></ScrollView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/songlistpagetop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/textView4"
        android:scaleType="centerCrop"
        android:onClick="screenSwitcherToMain"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_list"
        android:id="@+id/textView11"
        android:textSize="40sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_song_str"
        android:id="@+id/textView4"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:onClick="screenSwitcherToFreakTheFreakview"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_song_str"
        android:id="@+id/textView6"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:onClick="screenSwitcherToGiveItUp"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_song_str"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:textColor="#fcfdfc"
        android:onClick="screenSwitcherToSway"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="50dp" />
    /ScrollView>
</RelativeLayout>
