<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.romanprisyazhnuk.colibriplayertest.MainActivity"
    android:background="#090808">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_song_str"
            android:id="@+id/textView17"
            android:textSize="30sp"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold"
            android:textColor="#fcfdfc"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:onClick="screenSwitcherToSongList"/>

        <SeekBar
            android:paddingTop="20sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:background="#d4155989" />

        <Button
            android:text="@string/play_str"
            android:textSize="15pt"
            android:textStyle="bold"
            android:onClick="playAndStop"
            android:id="@+id/ButtonPlayStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="-3dp"
            android:background="@drawable/playbutton"
            android:visibility="visible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView4"
            android:layout_below="@+id/seekBar"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="bold"
                android:textColor="#fcfdfc"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/give_it_up_text"
                android:paddingLeft="10sp"
                android:id="@+id/textView18" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
