<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.romanprisyazhnuk.thinkaheadapp.MainActivity"
    android:background="#090808">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView6" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:src="@drawable/mainpagebackground"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="70dp"
                android:onClick="screenSwitcherToAboutUs"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/imageView2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:paddingTop="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/songlistpagetop"
                    android:scaleType="centerCrop"
                    android:onClick="screenSwitcherToSongList"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:paddingTop="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="58dp"
                    android:text="@string/our_songs_str"
                    android:id="@+id/textView5"
                    android:textSize="30sp"
                    android:fontFamily="sans-serif-thin"
                    android:textStyle="bold"
                    android:textColor="#fcfdfc"
                    android:paddingLeft="10sp"
                    android:onClick="screenSwitcherToSongList"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView3"
                    android:layout_toEndOf="@+id/imageView3" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:text="@string/about_group_str"
                android:id="@+id/textView10"
                android:textSize="30sp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="bold"
                android:textColor="#fcfdfc"
                android:paddingLeft="10sp"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_toRightOf="@+id/imageView2"
                android:layout_toEndOf="@+id/imageView2"
                android:layout_marginBottom="47dp"
                android:onClick="screenSwitcherToAboutUs"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_main_str"
                android:id="@+id/textView12"
                android:textSize="40sp"
                android:fontFamily="sans-serif-thin"
                android:textStyle="bold"
                android:textColor="#fcfdfc"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
